--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,7 +7,12 @@ authors = [
     { name = "Carlos Bermudez Porto", email = "cbermudez.dev@gmail.com" },
 ]
 requires-python = ">=3.13"
-dependencies = ["typer>=0.16.0", "web3>=7.12.0"]
+dependencies = [
+    "rich>=14.0.0",
+    "structlog>=25.4.0",
+    "typer>=0.16.0",
+    "web3>=7.12.0",
+]
 
 [project.scripts]
 expb = "expb:app"
