--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,7 @@ authors = [
 ]
 requires-python = ">=3.13"
 dependencies = [
+    "docker>=7.1.0",
     "rich>=14.0.0",
     "structlog>=25.4.0",
     "typer>=0.16.0",
