--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ authors = [
 requires-python = ">=3.13"
 dependencies = [
     "docker>=7.1.0",
+    "pyyaml>=6.0.2",
     "rich>=14.0.0",
     "structlog>=25.4.0",
     "typer>=0.16.0",
