feat: add option to pull docker images and update documentation

--- a/example-expb.yaml
+++ b/example-expb.yaml
@@ -1,6 +1,9 @@
 ﻿# Network to use
 network: mainnet
 
+# Pull images before execution
+pull_images: true
+
 # Kute image to use
 kute_image: nethermindeth/kute:latest
 
