--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ authors = [
 requires-python = ">=3.13"
 dependencies = [
     "docker>=7.1.0",
+    "jinja2>=3.1.6",
     "pyyaml>=6.0.2",
     "rich>=14.0.0",
     "structlog>=25.4.0",
@@ -22,3 +23,9 @@ expb = "expb:app"
 [build-system]
 requires = ["hatchling"]
 build-backend = "hatchling.build"
+
+[tool.hatch.build.targets.wheel]
+packages = ["src/expb"]
+
+[tool.hatch.build.targets.wheel.sources]
+"src" = ""
