--- a/example-expb.yaml
+++ b/example-expb.yaml
@@ -64,6 +64,8 @@ scenarios:
     snapshot_path: ./work_dir/snapshot
     # Required: Number of payloads to run
     amount: 100
+    # Optional: Delay between payloads requests in seconds. Defaults to 0 seconds.
+    delay: 0
     # Optional: Duration of the scenario. Defaults to 10 minutes.
     duration: 10m
     # Optional: Duration of the warmup (k6 setup duration). Defaults to 10 minutes.
