--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ requires-python = ">=3.13"
 dependencies = [
     "docker>=7.1.0",
     "jinja2>=3.1.6",
+    "pydantic>=2.11.7",
     "pyyaml>=6.0.2",
     "rich>=14.0.0",
     "structlog>=25.4.0",
